Fixing date colors for light dark mode.

--- a/src/assets/css/aboutMe.css
+++ b/src/assets/css/aboutMe.css
@@ -39,11 +39,11 @@
 
 
 .light-mode .vertical-timeline-element-date{
-  color: #000;
+  color: #000 !important;
 }
 
 .dark-mode .vertical-timeline-element-date{
-  color: #fff;
+  color: #fff !important;
 }
 
 .aboutMeContent{
@@ -76,10 +76,6 @@
 
 .dark-mode .vertical-timeline-element-icon{
   background-color: #ffc228;
-}
-
-.vertical-timeline-element-date{
-  color: #fff !important;
 }
 
 @media only screen and (max-width: 500px) {
